psd: fix opening single-layer files

The changes I'd intended for TIFF are correct, but they are not for
native PSD files.

BUG: 458556
(cherry picked from commit 74f6bdafe7fb48063504811c68c2f63cf194856a)